// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Bulleted table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "bulleted",
    "indent": 1,
    "type": "table",
  },
]
`;

exports[`Table Consecutive table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Node in table cells: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "href": "hashtag",
            "raw": "#hashtag",
            "type": "hashTag",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "* deco",
            "pathType": "relative",
            "raw": "[* deco]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": " ",
            "pathType": "relative",
            "raw": "[ ]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "\`code\`",
            "text": "\`code\`",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "https://external.com",
            "pathType": "absolute",
            "raw": "https://external.com",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "https://external.com",
            "pathType": "absolute",
            "raw": "[https://external.com]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "left",
            "href": "https://external.com",
            "pathType": "absolute",
            "raw": "[left https://external.com]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "right",
            "href": "https://external.com",
            "pathType": "absolute",
            "raw": "[https://external.com right]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "$ x",
            "pathType": "relative",
            "raw": "[$ x]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "N35.6812362,E139.7649361",
            "pathType": "relative",
            "raw": "[N35.6812362,E139.7649361]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "href": "hashTag",
            "raw": "#hashTag",
            "type": "hashTag",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "? helpfeel",
            "text": "? helpfeel",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "$ commandLine",
            "text": "$ commandLine",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "progfay.icon",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "link": "",
            "raw": "[https://image.com/image.png]",
            "src": "https://image.com/image.png",
            "type": "image",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "content": "",
            "href": "link",
            "pathType": "relative",
            "raw": "[link]",
            "type": "link",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "plain",
            "text": "plain",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "> quote",
            "text": "> quote",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "progfay.icon",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "link",
          },
          Object {
            "raw": "]",
            "text": "]",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "link": "",
            "raw": "[https://image.com/image.png]",
            "src": "https://image.com/image.png",
            "type": "image",
          },
          Object {
            "raw": "]",
            "text": "]",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "strong",
            "pathType": "relative",
            "raw": "[strong]",
            "type": "link",
          },
          Object {
            "raw": "]",
            "text": "]",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "node in table cells",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Simple table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Staggered table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "4",
            "text": "4",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [],
      ],
    ],
    "fileName": "Staggered",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Table with empty cells: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": " ",
            "text": " ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "　",
            "text": "　",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "  ",
            "text": "  ",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [],
        Array [],
        Array [],
      ],
    ],
    "fileName": " ",
    "indent": 0,
    "type": "table",
  },
]
`;
